    * Add: blocks now combine with themselves if possible when being placed (i.e. placing a step next to another one will convert into a slab), fixes #11.
    * Add keybindings for the trowel to directly select block types (by default numpad 0 = full block, numpad 1 = stairs, numpad 2 = slab, etc.), fixes #24.
    * Add a validation of the material id mapping of the clients when they connect to servers, fixes #28.
    * Fix portable ladder not having localization.
    * Fix portable ladder not having a texture for the break particles.
    * Fix the trowel not showing the binded block in the item model.
    * Fix localization issue with the double stone slabs.

1.1.2:
    * Fix crash when a grass slab is destroyed by an explosion.
    * Fix the grass slab item having the wrong name.
    * Fix more culling bugs in the stairs.
    * Fix crash when starting a server on Windows.

1.1.1:
    * Fix startup crash on windows.
    * Fix invisible faces on stairs when stacked on top of each other.

1.1.0:
    - 1.8.8:
        * Updated to Minecraft Forge version 1.8.8.
    * Add a portable ladder block.
    * Add materials for coarse dirt, podzol and mycelium, fixes #25.
    * Add compatibility for thaumcraft blocks.
    * Add fence and fence gate block types.
    * Add a GUI for the trowel when you shift-right click on the air, fixes #23.
    * Add a model for the trowel.
    * Reduced significantly the blocks' space usage on disk and made it able to better handle removing/adding materials from existing worlds.
    * Blocks now have the block hardness and explosion resistance of their material.
    * Fix grass slabs world gen generating chunks recursively, fixes #22.

1.0.4:
	* Add materials for the stone variants and the prismarine blocks, fixes #21.
	* Fix vertical slabs culling when placed next to each other, fixes #18.

1.0.3:
    * Fix crash when using forge versions higher than 1521.

1.0.2: